--- a/main.tex
+++ b/main.tex
@@ -117,8 +117,8 @@ An assignment submitted as the mid-term project of Bioinformatics.
 %% TARTALOM
 \input{ex1}
 \clearpage
-%\input{ex2}
-%\clearpage
+\input{ex2}
+\clearpage
 %\input{ex3}
 %\clearpage
 %\input{ex4}
