--- a/ex2.tex
+++ b/ex2.tex
@@ -5,13 +5,6 @@ I downloaded the \texttt{FASTA} from \emph{UniProt.org} with the identifier
 \section{Original File}
 \lstinputlisting{files/Q62936.fasta}
 
-\section{PDZ1}
-\lstinputlisting{files/PDZ1}
+\section{Sequence slices}
+\lstinputlisting{files/PDZ123.fasta}
 
-\clearpage
-\section{PDZ2}
-\lstinputlisting{files/PDZ2}
-
-
-\section{PDZ3}
-\lstinputlisting{files/PDZ3}
