--- a/main.tex
+++ b/main.tex
@@ -119,8 +119,8 @@ An assignment submitted as the mid-term project of Bioinformatics.
 \clearpage
 \input{ex2}
 \clearpage
-%\input{ex3}
-%\clearpage
+\input{ex3}
+\clearpage
 %\input{ex4}
 %\clearpage
 %\input{ex5}
