--- a/main.tex
+++ b/main.tex
@@ -121,8 +121,8 @@ An assignment submitted as the mid-term project of Bioinformatics.
 \clearpage
 \input{ex3}
 \clearpage
-%\input{ex4}
-%\clearpage
+\input{ex4}
+\clearpage
 %\input{ex5}
 %\clearpage
 %\input{ex6}
