--- a/ex4.tex
+++ b/ex4.tex
@@ -15,5 +15,5 @@ I chose the windows size to be that large, because I wanted to see if the whole 
 \includegraphics[width=\textwidth]{dotmatcher.png}
 \caption{As seen on the picture, the \emph{three PDZ domains} are aligning to each other.
 \href{http://www.bioinformatics.nl/emboss-explorer/output/146118/dotmatcher.1.png}{Source}}
-\label{phytree1}
+\label{dotplot}
 \end{figure}
