--- a/main.tex
+++ b/main.tex
@@ -123,13 +123,11 @@ An assignment submitted as the mid-term project of Bioinformatics.
 \clearpage
 \input{ex4}
 \clearpage
-%\input{ex5}
-%\clearpage
+\input{ex5}
+\clearpage
 %\input{ex6}
 %\clearpage
 %\input{ex7}
-%\clearpage
-%\input{ex8}
 %\clearpage
 %% TARTALOM
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
