ex7 not revisioned

--- a/main.tex
+++ b/main.tex
@@ -125,10 +125,10 @@ An assignment submitted as the mid-term project of Bioinformatics.
 \clearpage
 \input{ex5}
 \clearpage
-%\input{ex6}
-%\clearpage
-%\input{ex7}
-%\clearpage
+\input{ex6}
+\clearpage
+\input{ex7}
+\clearpage
 %% TARTALOM
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %% BEFEJEZÉS
