--- a/main.tex
+++ b/main.tex
@@ -129,20 +129,29 @@ An assignment submitted as the mid-term project of Bioinformatics.
 \clearpage
 \input{ex7}
 \clearpage
+
+\chapter{The documentation}
+All relevant steps and essential informations of completing this assignment are listed in the document, written in \LaTeX.
+
+This document, and the corresponding data files, scripts, figures etc. can be found at my \href{https://github.com/botcs/bioinfo}{GitHub repository}.
+
+\centering{
+
+\topskip0pt
+\vspace*{\fill}
+{\Huge
+Thank you for reading!
+}
+
+\vspace*{\fill}
+}
 %% TARTALOM
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %% BEFEJEZÉS
 
-%\input{chapters/summary}		%
-\clearpage
-%\input{chapters/future}			%
-\clearpage
-
 \listoffigures
 \addcontentsline{toc}{chapter}{List of Figures}
-\clearpage
 \printbibliography
-\clearpage
 %% BEFEJEZÉS
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \end{document}
